
20100119: Changed the GET_INDICATOR script function. Added the BARS parm. This allows user to specify
          how many BARS they want returned. See docs for details.

20100121: In order to enable a simple scripting system, I felt it was better to break down the big classes
          into many simple classes. Wrote wrapper classes for every indicator. This way we can allow for
          flexibility and keep a single interface. Will be doing more of the same where possible.
          Added 50+ new classes, mostly ta-lib wrappers.

20100122: Added FI, LMS, PP, SZ, THERM, VFI, VIDYA indicators from 0.36.

20100130: Big changes to the indicators. I have reinstated the 0.36 version of indicators. Now we can have
          the old hard coded version that uses a GUI for settings and the script version. Use the CUS
          indicator to use scripts. Will be tweaking the indicators over time. Possibly adding MA
          capability for them.

          Consolidated many indicators into grouped functions like CDL, TRIG, MATH, MATH2 etc. See docs.

          Removed most of the /misc/CUS_examples that did not demonstrate good uses of indicator scripts.

20100131: Fixed a bug in CSV that did not prepare the filename to be used as a symbol override. Also
          fixed bug that did not use the supplied symbol switch if no symbol was specified in the csv field
          format switch. Also added a 'G' format field option to ignore unused fields in the data stream.
          Also, when using the filename as a symbol, no attempt to strip off the suffix will be made. This
          may interfere with user plans to actually use the suffix. Better not second guess the users.
          Anyway, file suffix's are an evil dos, win32 legacy conventions and should be severely
          punished by law. Updated docs to reflect the changes.

          Fixed bug that did not update charts that are newly created in Qtstalker::



