@@ -28,7 +28,7 @@
 <br>
 <p></p>
 <hr>
-<h3>Symbols</h3>
+<h3 style="text-decoration: underline;">Symbols</h3>
 This function allow scripts to return a list of symbols in the quote
 database.<br>
 <br>
@@ -42,7 +42,36 @@ single character.<br>
 </ul>
 <br>
 <hr style="width: 100%; height: 2px;"><br>
-<h3>Data Exchange</h3>
+<h3 style="text-decoration: underline;">Utilities</h3>
+CLEAR<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; Used in script loops to clear memory of data
+used in the script. This is <span
+ style="text-decoration: underline; font-weight: bold;">MANDATORY</span>
+when looping in scripts. If not used, we could develop memory leaks or
+duplicate variable errors.<br>
+<br>
+<hr style="width: 100%; height: 2px;"><br>
+<h3 style="text-decoration: underline;">Group Functions</h3>
+<br>
+<br>
+GROUP_ADD,&lt;GROUP_NAME&gt;,&lt;GROUP_ITEM&gt;<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; This function will add an item to a Qtstalker
+group. If
+&lt;GROUP_NAME&gt; does not exist, it will be created and the
+&lt;GROUP_ITEM&gt; added.<br>
+<br>
+<ul>
+  <li>&lt;GROUP_NAME&gt; is the name of the group to add items to.</li>
+  <li>&lt;GROUP_ITEM&gt; is the item we want to add to the group.<br>
+  </li>
+</ul>
+<br>
+<br>
+<br>
+<hr style="width: 100%; height: 2px;"><br>
+<h3 style="text-decoration: underline;">Data Exchange</h3>
 <p>These functions allow indicator scripts to exchange raw data between
 scripts
 and Qtstalker. If we want access to raw indicator data we use the
@@ -102,7 +131,8 @@ letters instead of numbers in this case.
 <p>On success returns "0", failure returns "1";</p>
 <p></p>
 <hr>
-<h3>Plot Format</h3>
+<h3><span style="text-decoration: underline;">Plot</span><br>
+</h3>
 <p></p>
 <p>This function allows the indicator script to plot indicators.</p>
 <p></p>
@@ -137,7 +167,8 @@ If an error occurs, the script should exit execution. Please browse the
 included scripts for examples of how they should be used.</p>
 <p></p>
 <hr>
-<h3>Indicator Format</h3>
+<h3><span style="text-decoration: underline;">Indicator</span><br>
+</h3>
 <p></p>
 <p>&lt;NAME&gt; is the name given to the indicator</p>
 <p></p>
